H/csound.h

  
  typedef struct {
    char    *devName;
    int     devNum;
    int     bufSamp_SW;
    int     bufSamp_HW;
    int     nChannels;
    int     sampleFormat;
    float   sampleRate;
  } csRtAudioParams;
  typedef struct CSOUND_  CSOUND;
  typedef struct windat_  WINDAT;
  typedef struct xyindat_ XYINDAT;
  PUBLIC int csoundInitialize(int *argc, char ***argv, int flags);
  PUBLIC CSOUND *csoundCreate(void *hostData);
  PUBLIC int csoundPreCompile(CSOUND *);
  PUBLIC int csoundInitializeCscore(CSOUND *, FILE *insco, FILE *outsco);
  PUBLIC int csoundQueryInterface(const char *name, void **iface, int *version);
  PUBLIC void csoundDestroy(CSOUND *);
  PUBLIC int csoundGetVersion(void);
  PUBLIC int csoundGetAPIVersion(void);
  PUBLIC void *csoundGetHostData(CSOUND *);
  PUBLIC void csoundSetHostData(CSOUND *, void *hostData);
  PUBLIC const char *csoundGetEnv(CSOUND *csound, const char *name);
  PUBLIC int csoundSetGlobalEnv(const char *name, const char *value);
  PUBLIC int csoundCompile(CSOUND *, int argc, char **argv);
  PUBLIC int csoundPerform(CSOUND *);
  PUBLIC int csoundPerformKsmps(CSOUND *);
  PUBLIC int csoundPerformKsmpsAbsolute(CSOUND *);
  PUBLIC int csoundPerformBuffer(CSOUND *);
  PUBLIC void csoundStop(CSOUND *);
  PUBLIC int csoundCleanup(CSOUND *);
  PUBLIC void csoundReset(CSOUND *);
  PUBLIC MYFLT csoundGetSr(CSOUND *);
  PUBLIC MYFLT csoundGetKr(CSOUND *);
  PUBLIC int csoundGetKsmps(CSOUND *);
  PUBLIC int csoundGetNchnls(CSOUND *);
  PUBLIC MYFLT csoundGet0dBFS(CSOUND *);
  PUBLIC int csoundGetStrVarMaxLen(CSOUND *);
  PUBLIC int csoundGetSampleFormat(CSOUND *);
  PUBLIC int csoundGetSampleSize(CSOUND *);
  PUBLIC long csoundGetInputBufferSize(CSOUND *);
  PUBLIC long csoundGetOutputBufferSize(CSOUND *);
  PUBLIC MYFLT *csoundGetInputBuffer(CSOUND *);
  PUBLIC MYFLT *csoundGetOutputBuffer(CSOUND *);
  PUBLIC MYFLT *csoundGetSpin(CSOUND *);
  PUBLIC MYFLT *csoundGetSpout(CSOUND *);
  PUBLIC const char *csoundGetOutputFileName(CSOUND *);
  PUBLIC void csoundSetHostImplementedAudioIO(CSOUND *, int state, int bufSize);
  PUBLIC double csoundGetScoreTime(CSOUND *);
  PUBLIC int csoundIsScorePending(CSOUND *);
  PUBLIC void csoundSetScorePending(CSOUND *, int pending);
  PUBLIC MYFLT csoundGetScoreOffsetSeconds(CSOUND *);
  PUBLIC void csoundSetScoreOffsetSeconds(CSOUND *, MYFLT time);
  PUBLIC void csoundRewindScore(CSOUND *);
  PUBLIC void csoundSetCscoreCallback(CSOUND *,
                                      void (*cscoreCallback_)(CSOUND *));
  PUBLIC int csoundScoreSort(CSOUND *, FILE *inFile, FILE *outFile);
  PUBLIC int csoundScoreExtract(CSOUND *,
                                FILE *inFile, FILE *outFile, FILE *extractFile);
  PUBLIC CS_PRINTF2 void csoundMessage(CSOUND *, const char *format, ...);
  PUBLIC CS_PRINTF3 void csoundMessageS(CSOUND *,
                                        int attr, const char *format, ...);
  PUBLIC void csoundMessageV(CSOUND *,
                             int attr, const char *format, va_list args);
  PUBLIC void csoundSetMessageCallback(CSOUND *,
                            void (*csoundMessageCallback_)(CSOUND *,
                                                           int attr,
                                                           const char *format,
                                                           va_list valist));
  PUBLIC void csoundSetInputValueCallback(CSOUND *,
                            void (*inputValueCalback_)(CSOUND *,
                                                       const char *channelName,
                                                       MYFLT *value));
  PUBLIC void csoundSetOutputValueCallback(CSOUND *,
                            void (*outputValueCalback_)(CSOUND *,
                                                        const char *channelName,
                                                        MYFLT value));
  PUBLIC void csoundSetExternalMidiInOpenCallback(CSOUND *,
            int (*func)(CSOUND *, void **userData, const char *devName));
  PUBLIC void csoundSetExternalMidiReadCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData,
                                  unsigned char *buf, int nBytes));
  PUBLIC void csoundSetExternalMidiInCloseCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData));
  PUBLIC void csoundSetExternalMidiOutOpenCallback(CSOUND *,
            int (*func)(CSOUND *, void **userData, const char *devName));
  PUBLIC void csoundSetExternalMidiWriteCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData,
                                  const unsigned char *buf, int nBytes));
  PUBLIC void csoundSetExternalMidiOutCloseCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData));
  PUBLIC void csoundSetMakeGraphCallback(CSOUND *,
                            void (*makeGraphCallback_)(CSOUND *,
                                                       WINDAT *windat,
                                                       const char *name));
  PUBLIC void csoundSetDrawGraphCallback(CSOUND *,
                            void (*drawGraphCallback_)(CSOUND *,
                                                       WINDAT *windat));
  PUBLIC void csoundSetKillGraphCallback(CSOUND *,
                            void (*killGraphCallback_)(CSOUND *,
                                                       WINDAT *windat));
  PUBLIC void csoundSetMakeXYinCallback(CSOUND *,
                            void (*makeXYinCallback_)(CSOUND *, XYINDAT *,
                                                      MYFLT x, MYFLT y));
  PUBLIC void csoundSetReadXYinCallback(CSOUND *,
                            void (*readXYinCallback_)(CSOUND *, XYINDAT *));
  PUBLIC void csoundSetKillXYinCallback(CSOUND *,
                            void (*killXYinCallback_)(CSOUND *, XYINDAT *));
  PUBLIC void csoundSetExitGraphCallback(CSOUND *,
                            int (*exitGraphCallback_)(CSOUND *));
  PUBLIC int csoundAppendOpcode(CSOUND *, const char *opname,
                                int dsblksiz, int thread,
                                const char *outypes, const char *intypes,
                                int (*iopadr)(CSOUND *, void *),
                                int (*kopadr)(CSOUND *, void *),
                                int (*aopadr)(CSOUND *, void *));
  PUBLIC void csoundSetYieldCallback(CSOUND *, int (*yieldCallback_)(CSOUND *));
  PUBLIC void csoundSetPlayopenCallback(CSOUND *,
                            int (*playopen__)(CSOUND *,
                                              const csRtAudioParams *parm));
  PUBLIC void csoundSetRtplayCallback(CSOUND *,
                            void (*rtplay__)(CSOUND *,
                                             const MYFLT *outBuf, int nbytes));
  PUBLIC void csoundSetRecopenCallback(CSOUND *,
                            int (*recopen_)(CSOUND *,
                                            const csRtAudioParams *parm));
  PUBLIC void csoundSetRtrecordCallback(CSOUND *,
                            int (*rtrecord__)(CSOUND *,
                                              MYFLT *inBuf, int nbytes));
  PUBLIC void csoundSetRtcloseCallback(CSOUND *, void (*rtclose__)(CSOUND *));
  PUBLIC int csoundRegisterSenseEventCallback(CSOUND *,
                                              void (*func)(CSOUND *, void *),
                                              void *userData);