interfaces/csound5.lisp

                     (csound-message-callback- :pointer))
       (cffi:defcfun ("csoundMessageV" csound-message-v-1)
                     :void
                     (anonymous4747 :pointer)
                     (attr :int)
                     (format :pointer)
                     (args va-list))
       (cffi:defcfun ("csoundMessageS" csound-message-s-1)
                     :void
                     (anonymous4748 :pointer)
                     (attr :int)
                     (format :pointer))
       (cffi:defcfun ("csoundMessage" csound-message-1)
                     :void
                     (anonymous4750 :pointer)
                     (format :pointer))
       (cffi:defcfun ("csoundScoreExtract" csound-score-extract-1)
                     :int
                     (anonymous4752 :pointer)
                     (in-file :pointer)
                     (out-file :pointer)
                     (extract-file :pointer))
       (cffi:defcfun ("csoundScoreSort" csound-score-sort-1)
                     :int
                     (anonymous4753 :pointer)
                     (in-file :pointer)
                     (out-file :pointer))
       (cffi:defcfun ("csoundSetCscoreCallback" csound-set-cscore-callback-1)
                     :void
                     (anonymous4754 :pointer)
                     (cscore-callback- :pointer))
       (cffi:defcfun ("csoundRewindScore" csound-rewind-score-1)
                     :void
                     (anonymous4755 :pointer))
       (cffi:defcfun ("csoundSetScoreOffsetSeconds"
                      csound-set-score-offset-seconds-1)
                     :void
                     (anonymous4756 :pointer)
                     (time :float))
       (cffi:defcfun ("csoundGetScoreOffsetSeconds"
                      csound-get-score-offset-seconds-1)
                     :float
                     (anonymous4757 :pointer))
       (cffi:defcfun ("csoundSetScorePending" csound-set-score-pending-1)
                     :void
                     (anonymous4758 :pointer)
                     (pending :int))
       (cffi:defcfun ("csoundIsScorePending" csound-is-score-pending-1)
                     :int
                     (anonymous4759 :pointer))
       (cffi:defcfun ("csoundGetScoreTime" csound-get-score-time-1)
                     :float
                     (anonymous4760 :pointer))
       (cffi:defcfun ("csoundSetHostImplementedAudioIO"
                      csound-set-host-implemented-audio-io-1)
                     :void
                     (anonymous4761 :pointer)
                     (state :int)
                     (buf-size :int))
       (cffi:defcfun ("csoundGetOutputFileName" csound-get-output-file-name-1)
                     :pointer
                     (anonymous4762 :pointer))
       (cffi:defcfun ("csoundGetSpout" csound-get-spout-1)
                     :pointer
                     (anonymous4763 :pointer))
       (cffi:defcfun ("csoundGetSpin" csound-get-spin-1)
                     :pointer
                     (anonymous4764 :pointer))
       (cffi:defcfun ("csoundGetOutputBuffer" csound-get-output-buffer-1)
                     :pointer
                     (anonymous4765 :pointer))
       (cffi:defcfun ("csoundGetInputBuffer" csound-get-input-buffer-1)
                     :pointer
                     (anonymous4766 :pointer))
       (cffi:defcfun ("csoundGetOutputBufferSize"
                      csound-get-output-buffer-size-1)
                     :long
                     (anonymous4767 :pointer))
       (cffi:defcfun ("csoundGetInputBufferSize"
                      csound-get-input-buffer-size-1)
                     :long
                     (anonymous4768 :pointer))
       (cffi:defcfun ("csoundGetSampleSize" csound-get-sample-size-1)
                     :int
                     (anonymous4769 :pointer))
       (cffi:defcfun ("csoundGetSampleFormat" csound-get-sample-format-1)
                     :int
                     (anonymous4770 :pointer))
       (cffi:defcfun ("csoundGetStrVarMaxLen" csound-get-str-var-max-len-1)
                     :int
                     (anonymous4771 :pointer))
       (cffi:defcfun ("csoundGet0dBFS" csound-get0d-bfs-1)
                     :float
                     (anonymous4772 :pointer))
       (cffi:defcfun ("csoundGetNchnls" csound-get-nchnls-1)
                     :int
                     (anonymous4773 :pointer))
       (cffi:defcfun ("csoundGetKsmps" csound-get-ksmps-1)
                     :int
                     (anonymous4774 :pointer))
       (cffi:defcfun ("csoundGetKr" csound-get-kr-1)
                     :float
                     (anonymous4775 :pointer))
       (cffi:defcfun ("csoundGetSr" csound-get-sr-1)
                     :float
                     (anonymous4776 :pointer))
       (cffi:defcfun ("csoundReset" csound-reset-1)
                     :void
                     (anonymous4777 :pointer))
       (cffi:defcfun ("csoundCleanup" csound-cleanup-1)
                     :int
                     (anonymous4778 :pointer))
       (cffi:defcfun ("csoundStop" csound-stop-1)
                     :void
                     (anonymous4779 :pointer))
       (cffi:defcfun ("csoundPerformBuffer" csound-perform-buffer-1)
                     :int
                     (anonymous4780 :pointer))
       (cffi:defcfun ("csoundPerformKsmpsAbsolute"
                      csound-perform-ksmps-absolute-1)
                     :int
                     (anonymous4781 :pointer))
       (cffi:defcfun ("csoundPerformKsmps" csound-perform-ksmps-1)
                     :int
                     (anonymous4782 :pointer))
       (cffi:defcfun ("csoundPerform" csound-perform-1)
                     :int
                     (anonymous4783 :pointer))
       (cffi:defcfun ("csoundCompile" csound-compile-1)
                     :int
                     (anonymous4784 :pointer)
                     (argc :int)
                     (argv :pointer))
       (cffi:defcfun ("csoundCompileCsd" csound-compile-csd)
                     :int
                     (anonymous4784 :pointer)
                     (csd :pointer))
       (cffi:defcfun ("csoundSetGlobalEnv" csound-set-global-env)
                     :int
                     (name :pointer)
                     (value :pointer))
       (cffi:defcfun ("csoundGetEnv" csound-get-env-1)
                     :pointer
                     (csound :pointer)
                     (name :pointer))
       (cffi:defcfun ("csoundSetHostData" csound-set-host-data-1)
                     :void
                     (anonymous4785 :pointer)
                     (host-data :pointer))
       (cffi:defcfun ("csoundGetHostData" csound-get-host-data-1)
                     :pointer
                     (anonymous4786 :pointer))
       (cffi:defcfun ("csoundGetAPIVersion" csound-get-apiversion) :int)
       (cffi:defcfun ("csoundGetVersion" csound-get-version) :int)
       (cffi:defcfun ("csoundDestroy" csound-destroy)
                     :void
                     (anonymous4787 :pointer))
       (cffi:defcfun ("csoundQueryInterface" csound-query-interface)
                     :int
                     (name :pointer)
                     (iface :pointer)
                     (version :pointer))
       (cffi:defcfun ("csoundInitializeCscore" csound-initialize-cscore-1)
                     :int
                     (anonymous4788 :pointer)
                     (insco :pointer)
                     (outsco :pointer))
       (cffi:defcfun ("csoundPreCompile" csound-pre-compile-1)
                     :int
                     (anonymous4789 :pointer))
       (cffi:defcfun ("csoundCreate" csound-create)
                     :pointer
                     (host-data :pointer))
       (cffi:defcfun ("csoundInitialize" csound-initialize)
                     :int
                     (argc :pointer)
                     (argv :pointer)
                     (flags :int))
       (defparameter cs-apisubver 0)
       (defparameter cs-apiversion 1)
       (defparameter csound-control-channel-exp 3)
       (defparameter csound-control-channel-lin 2)
       (defparameter csound-control-channel-int 1)
       (defparameter csound-output-channel 32)
       (defparameter csound-input-channel 16)
       (defparameter csound-channel-type-mask 15)
       (defparameter csound-string-channel 3)
       (defparameter csound-audio-channel 2)
       (defparameter csound-control-channel 1)
       (defparameter csoundinit-no-atexit 2)
       (defparameter csoundinit-no-signal-handler 1))

(eval-when (:load-toplevel :execute) (pushnew :csound5 *features*))


